# producto2

./: .gitignore  README.md
cpp/: soap_client.cpp  soap_translate.cpp  spanish_converter.cpp
dotnet10/soap-client/: Program.cs
dotnet10/soap-translate/: Program.cs  SoapTranslate.csproj
dotnet10/spanish-converter/: Program.cs
go/: go.mod  soap_client.go  soap_translate.go  spanish_converter.go
java/: SoapClient.java  SoapTranslate.java  SpanishConverter.java
node/: package-lock.json  package.json  soap_client.js  soap_translate.js  spanish_converter.js
perl/: soap_client.pl  soap_translate.pl  spanish_converter.pl
ruby/: soap_client.rb  soap_translate.rb  spanish_converter.rb
rust/: Cargo.toml  soap_client.rs  soap_translate.rs
