[package]
name = "soap_case_study"
version = "0.1.0"
authors = ["Example"]
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
quick-xml = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12"
urlencoding = "2.1"
